feat: apply layout functionality up through combobox

--- a/components/combobox/apiExamples/emphasized/basic.html
+++ b/components/combobox/apiExamples/emphasized/basic.html
@@ -1,4 +1,4 @@
-<auro-combobox layout="emphasized" shape="pill" size="xl" placeholder="Placeholder content" required>
+<auro-combobox layout="emphasized" shape="pill" size="xl" placeholder="Placeholder content" required ondark style="width: 249px;">
   <span slot="bib.fullscreen.headline">Bib Header</span>
   <span slot="label">Name</span>
   <auro-menu>
@@ -14,7 +14,7 @@
   </span>
 </auro-combobox>
 
-<auro-combobox layout="emphasized" shape="pill-left" size="xl" placeholder="Placeholder content" required>
+<auro-combobox layout="emphasized" shape="pill-left" size="xl" placeholder="Placeholder content" required ondark style="width: 249px;">
   <span slot="bib.fullscreen.headline">Bib Header</span>
   <span slot="label">Name</span>
   <auro-menu>
@@ -30,7 +30,7 @@
   </span>
 </auro-combobox>
 
-<auro-combobox layout="emphasized" shape="pill-right" size="xl" placeholder="Placeholder content" required>
+<auro-combobox layout="emphasized" shape="pill-right" size="xl" placeholder="Placeholder content" required ondark style="width: 249px;">
   <span slot="bib.fullscreen.headline">Bib Header</span>
   <span slot="label">Name</span>
   <auro-menu>
