--- a/components/input/src/styles/style.scss
+++ b/components/input/src/styles/style.scss
@@ -1,1 +1,1 @@
-@import '@aurodesignsystem/webcorestylesheets/src/utilityClasses/displayProperties';
+@use '@aurodesignsystem/webcorestylesheets/src/utilityClasses/displayProperties';
