--- a/components/combobox/src/styles/snowflake/style.scss
+++ b/components/combobox/src/styles/snowflake/style.scss
@@ -1,4 +1,4 @@
-:host([layout*='emphasized'][shape*='pill']) {
+:host([layout*='snowflake'][shape*='snowflake']) {
   [auro-input] { // CAN I MOVE THESE INTO DROPDOWN? DROPDOWN SHOULD BE SMART ENOUGH TO HIDE THE HELP TEXT OF ANY INPUT INSIDE IT
     width: 100%;
 
