perf: revert changes to `value` and `optionSelected` in select #621
BREAKING CHANGE: select `value` and `optionSelected` attributes default to type `string` and `HTMLElement` respectively.

--- a/components/select/apiExamples/resetState.html
+++ b/components/select/apiExamples/resetState.html
@@ -1,7 +1,7 @@
 <auro-button id="resetStateBtn">Reset</auro-button>
 <br/><br/>
 
-<auro-select id="resetStateExample" value='["price"]'>
+<auro-select id="resetStateExample" value="price">
   <span slot="bib.fullscreen.headline">Bib Headline</span>
   <label slot="placeholder">Placeholder Text</label>
   <span slot="label">Name</span>
