--- a/components/menu/src/styles/default/color-menuoption.scss
+++ b/components/menu/src/styles/default/color-menuoption.scss
@@ -9,8 +9,10 @@
 @use "@aurodesignsystem/design-tokens/dist/legacy/auro-classic/SCSSVariables" as vac;
 
 :host {
-  background-color: var(--ds-auro-menuoption-container-color);
-  color: var(--ds-auro-menuoption-text-color);
+  .wrapper {
+    background-color: var(--ds-auro-menuoption-container-color);
+    color: var(--ds-auro-menuoption-text-color);
+  }
 
   svg {
     fill: var(--ds-auro-menuoption-icon-color);
