--- a/components/checkbox/src/styles/color.scss
+++ b/components/checkbox/src/styles/color.scss
@@ -8,12 +8,20 @@
 @import "@aurodesignsystem/design-tokens/dist/auro-classic/SCSSVariables";
 @import "@aurodesignsystem/design-tokens/dist/alaska/SCSSVariables--alaska";
 
+:host(:not([checked])) {
+  .cbxContainer {
+    &:hover {
+      --ds-auro-checkbox-container-color: var(--ds-advanced-color-boolean-isfalse-hover, #{$ds-advanced-color-boolean-isfalse-hover});
+    }
+  }
+}
+
 :host {
   .label {
     color: var(--ds-auro-checkbox-label-color);
   }
 
-  .label--cbx {
+  .inputContainer {
     &:after {
       background-color: var(--ds-auro-checkbox-container-color);
       border-color: var(--ds-auro-checkbox-border-color);
@@ -39,19 +47,12 @@
 :host([checked]) {
   --ds-auro-checkbox-border-color: var(--ds-advanced-color-boolean-istrue, #{$ds-advanced-color-boolean-istrue});
   --ds-auro-checkbox-container-color: var(--ds-advanced-color-boolean-istrue, #{$ds-advanced-color-boolean-istrue});
-
-  .label--cbx {
-    &:hover {
-      --ds-auro-checkbox-border-color: var(--ds-advanced-color-boolean-istrue-hover, #{$ds-advanced-color-boolean-istrue-hover});
-      --ds-auro-checkbox-container-color: var(--ds-advanced-color-boolean-istrue-hover, #{$ds-advanced-color-boolean-istrue-hover});
-    }
-  }
 }
 
 :host([checked]:focus-within) {
   --ds-auro-checkbox-border-color: var(--ds-advanced-color-state-focused-inverse, #{$ds-advanced-color-state-focused-inverse});
 
-  .label--cbx {
+  .inputContainer {
     &:hover {
       --ds-auro-checkbox-border-color: var(--ds-advanced-color-state-focused-inverse, #{$ds-advanced-color-state-focused-inverse});
       --ds-auro-checkbox-container-color: var(--ds-advanced-color-boolean-istrue-hover, #{$ds-advanced-color-boolean-istrue-hover});
@@ -63,7 +64,7 @@
   --ds-auro-checkbox-border-color: var(--ds-advanced-color-state-background-disabled, #{$ds-advanced-color-state-background-disabled});
   --ds-auro-checkbox-label-color: var(--ds-basic-color-texticon-disabled, #{$ds-basic-color-texticon-disabled});
 
-  .label--cbx {
+  .inputContainer {
     &:hover {
       --ds-auro-checkbox-border-color: var(--ds-advanced-color-state-background-disabled, #{$ds-advanced-color-state-background-disabled});
       --ds-auro-checkbox-container-color: var(--ds-advanced-color-boolean-isfalse, #{$ds-advanced-color-boolean-isfalse});
@@ -74,7 +75,7 @@
 :host([disabled][checked]) {
   --ds-auro-checkbox-container-color: var(--ds-advanced-color-state-background-disabled, #{$ds-advanced-color-state-background-disabled});
 
-  .label--cbx {
+  .inputContainer {
     &:hover {
       --ds-auro-checkbox-container-color: var(--ds-advanced-color-state-background-disabled, #{$ds-advanced-color-state-background-disabled});
     }
@@ -94,7 +95,7 @@
   --ds-auro-checkbox-border-color: var(--ds-advanced-color-boolean-error, #{$ds-advanced-color-boolean-error});
   --ds-auro-checkbox-container-color: var(--ds-advanced-color-boolean-error, #{$ds-advanced-color-boolean-error});
 
-  .label--cbx {
+  .inputContainer {
     &:hover {
       --ds-auro-checkbox-border-color: var(--ds-advanced-color-boolean-error-hover, #{$ds-advanced-color-boolean-error-hover});
       --ds-auro-checkbox-container-color: var(--ds-advanced-color-boolean-error-hover, #{$ds-advanced-color-boolean-error-hover});
@@ -105,7 +106,7 @@
 :host([error][checked]:focus-within) {
   --ds-auro-checkbox-border-color: var(--ds-advanced-color-state-focused-inverse, #{$ds-advanced-color-state-focused-inverse});
 
-  .label--cbx {
+  .inputContainer {
     &:hover {
       --ds-auro-checkbox-border-color: var(--ds-advanced-color-state-focused-inverse, #{$ds-advanced-color-state-focused-inverse});
       --ds-auro-checkbox-container-color: var(--ds-advanced-color-boolean-error-hover, #{$ds-advanced-color-boolean-error-hover});
@@ -120,7 +121,15 @@
   --ds-auro-checkbox-border-color: var(--ds-basic-color-border-inverse, #{$ds-basic-color-border-inverse});
   --ds-auro-checkbox-container-color: transparent;
 
-  .label--cbx {
+  .inputContainer {
+    &:hover {
+      --ds-auro-checkbox-container-color: var(--ds-advanced-color-boolean-isfalse-inverse-hover, #{$ds-advanced-color-boolean-isfalse-inverse-hover});
+    }
+  }
+}
+
+:host([onDark]:not([checked])) {
+  .inputContainer {
     &:hover {
       --ds-auro-checkbox-container-color: var(--ds-advanced-color-boolean-isfalse-inverse-hover, #{$ds-advanced-color-boolean-isfalse-inverse-hover});
     }
@@ -136,7 +145,7 @@
   --ds-auro-checkbox-checkmark-color: var(--ds-advanced-color-boolean-indicator-inverse, #{$ds-advanced-color-boolean-indicator-inverse});
   --ds-auro-checkbox-container-color: var(--ds-advanced-color-boolean-istrue-inverse, #{$ds-advanced-color-boolean-istrue-inverse});
 
-  .label--cbx {
+  .inputContainer {
     &:hover {
       --ds-auro-checkbox-border-color: transparent;
       --ds-auro-checkbox-container-color: var(--ds-advanced-color-boolean-istrue-inverse-hover, #{$ds-advanced-color-boolean-istrue-inverse-hover});
@@ -147,7 +156,7 @@
 :host([onDark][checked]:focus-within) {
   --ds-auro-checkbox-border-color: var(--ds-advanced-color-state-focused, #{$ds-advanced-color-state-focused});
 
-  .label--cbx {
+  .inputContainer {
     &:hover {
       --ds-auro-checkbox-border-color: var(--ds-advanced-color-state-focused, #{$ds-advanced-color-state-focused});
       --ds-auro-checkbox-container-color: var(--ds-advanced-color-boolean-istrue-inverse-hover, #{$ds-advanced-color-boolean-istrue-inverse-hover});
@@ -159,7 +168,7 @@
   --ds-auro-checkbox-border-color: var(--ds-advanced-color-state-background-inverse-disabled, #{$ds-advanced-color-state-background-inverse-disabled});
   --ds-auro-checkbox-label-color: var(--ds-basic-color-texticon-inverse-disabled, #{$ds-basic-color-texticon-inverse-disabled});
 
-  .label--cbx {
+  .inputContainer {
     &:hover {
       --ds-auro-checkbox-border-color: var(--ds-advanced-color-state-background-inverse-disabled, #{$ds-advanced-color-state-background-inverse-disabled});
       --ds-auro-checkbox-container-color: transparent;
@@ -170,7 +179,7 @@
 :host([onDark][disabled][checked]) {
   --ds-auro-checkbox-container-color: var(--ds-advanced-color-state-background-inverse-disabled, #{$ds-advanced-color-state-background-inverse-disabled});
 
-  .label--cbx {
+  .inputContainer {
     &:hover {
       --ds-auro-checkbox-container-color: var(--ds-advanced-color-state-background-inverse-disabled, #{$ds-advanced-color-state-background-inverse-disabled});
     }
@@ -190,7 +199,7 @@
   --ds-auro-checkbox-border-color: var(--ds-advanced-color-boolean-error-inverse, #{$ds-advanced-color-boolean-error-inverse});
   --ds-auro-checkbox-container-color: var(--ds-advanced-color-boolean-error-inverse, #{$ds-advanced-color-boolean-error-inverse});
 
-  .label--cbx {
+  .inputContainer {
     &:hover {
       --ds-auro-checkbox-border-color: var(--ds-advanced-color-boolean-error-inverse-hover, #{$ds-advanced-color-boolean-error-inverse-hover});
       --ds-auro-checkbox-container-color: var(--ds-advanced-color-boolean-error-inverse-hover, #{$ds-advanced-color-boolean-error-inverse-hover});
@@ -201,7 +210,7 @@
 :host([onDark][error][checked]:focus-within) {
   --ds-auro-checkbox-border-color: var(--ds-advanced-color-state-focused, #{$ds-advanced-color-state-focused});
 
-  .label--cbx {
+  .inputContainer {
     &:hover {
       --ds-auro-checkbox-border-color: var(--ds-advanced-color-state-focused, #{$ds-advanced-color-state-focused});
       --ds-auro-checkbox-container-color: var(--ds-advanced-color-boolean-error-inverse-hover, #{$ds-advanced-color-boolean-error-inverse-hover});
