perf: make shape/size styles shared layout

--- a/components/input/src/styles/shapeSize.scss
+++ b/components/input/src/styles/shapeSize.scss
@@ -1,152 +1,5 @@
 /* stylelint-disable */
 
 @use '@aurodesignsystem/design-tokens/dist/auro-classic/SCSSVariables';
+@use '../../../layoutElement/src/styles/shapeSize.scss';
 
-@function getCalculatedSize($size, $borderSize) {
-  @return calc(#{$size} - (2 * #{$borderSize}));
-}
-
-// SIZES
-$defaultBorderSize: 2px;
-$xl: 72px;
-$lg: 56px;
-$md: 48px;
-$sm: 36px;
-$xs: 24px;
-
-// SHAPES ---------------------------------------------------
-
-@mixin simple($size) {
-  $simpleBorderSize: 0px;
-
-  &.simple {
-    border-width: $simpleBorderSize;
-    min-height: getCalculatedSize($size, $simpleBorderSize);
-    max-height: getCalculatedSize($size, $simpleBorderSize);
-    background-color: unset;
-  }
-}
-
-// shape thin for 1px border
-
-@mixin thin($size) {
-  $thinBorderSize: 1px;
-
-  &.thin {
-    border-width: $thinBorderSize;
-    min-height: getCalculatedSize($size, $thinBorderSize);
-    max-height: getCalculatedSize($size, $thinBorderSize);
-    background-color: unset;
-  }
-}
-
-.shape-snowflake-xl,
-.shape-snowflake-lg,
-.shape-snowflake-md,
-.shape-snowflake-sm,
-.shape-snowflake-xs {
-  min-height: 56px;
-  max-height: 56px;
-  border-style: solid;
-  border-width: 2px;
-  border-color: transparent;
-  border-radius: 30px;
-
-  @include simple(60px);
-  @include thin(60px);
-}
-
-.shape-box-xl {
-  min-height: getCalculatedSize($xl, $defaultBorderSize);
-  max-height: getCalculatedSize($xl, $defaultBorderSize);
-  border-style: solid;
-  border-width: 2px;
-  border-color: transparent;
-
-  @include simple($xl);
-  @include thin($xl);
-}
-
-.shape-rounded-lg {
-  min-height: $lg;
-  max-height: $lg;
-  border-style: solid;
-  border-width: 2px;
-  border-color: transparent;
-  border-radius: 6px;
-
-  @include simple($lg);
-  @include thin($lg);
-}
-
-.shape-pill-xl {
-  min-height: $xl;
-  max-height: $xl;
-  border-style: solid;
-  border-width: 2px;
-  border-color: transparent;
-  border-radius: calc($xl / 2);
-
-  @include simple($xl);
-  @include thin($xl);
-}
-
-.shape-pill-left-xl {
-  min-height: $xl;
-  max-height: $xl;
-  border-style: solid;
-  border-width: 2px;
-  border-color: transparent;
-  border-radius: calc($xl / 2) 0 0 calc($xl / 2);
-
-  @include simple($xl);
-  @include thin($xl);
-}
-
-.shape-pill-right-xl {
-  min-height: $xl;
-  max-height: $xl;
-  border-style: solid;
-  border-width: 2px;
-  border-color: transparent;
-  border-radius: 0 calc($xl / 2) calc($xl / 2) 0;
-
-  @include simple($xl);
-  @include thin($xl);
-}
-
-.shape-pill-md {
-  min-height: $xl;
-  max-height: $xl;
-  border-style: solid;
-  border-width: 2px;
-  border-color: transparent;
-  border-radius: calc($xl / 2);
-
-  @include simple($md);
-  @include thin($md);
-}
-
-.shape-pill-left-md {
-  min-height: $xl;
-  max-height: $xl;
-  border-style: solid;
-  border-width: 2px;
-  border-color: transparent;
-  border-radius: calc($xl / 2) 0 0 calc($xl / 2);
-
-  @include simple($md);
-  @include thin($md);
-}
-
-.shape-pill-right-md {
-  min-height: $xl;
-  max-height: $xl;
-  border-style: solid;
-  border-width: 2px;
-  border-color: transparent;
-  border-radius: 0 calc($xl / 2) calc($xl / 2) 0;
-
-  @include simple($md);
-  @include thin($md);
-}
