--- a/components/combobox/src/styles/style.scss
+++ b/components/combobox/src/styles/style.scss
@@ -12,35 +12,10 @@
 
 :host([layout*='classic']) {
   [auro-input] {
-    min-height: var(--ds-size-700, #{v.$ds-size-700});
-    max-height: var(--ds-size-700, #{v.$ds-size-700});
-
-    &::part(iconContainer) {
-      top: 0;
-      display: flex;
-      height: 100%;
-      align-items: center;
-    }
-
-    &::part(accentIcon) {
-      transition: all .3s cubic-bezier(.215, .61, .355, 1);
-    }
+    width: 100%;
 
     &::part(helpText) {
       display: none;
-    }
-
-    &::part(wrapper) {
-      &:focus-within {
-        /* stylelint-disable declaration-no-important */
-        border-bottom-width: 0 !important;
-        box-shadow: unset !important;
-        outline: unset !important;
-        /* stylelint-enable declaration-no-important */
-      }
-
-      --ds-auro-input-border-color: transparent;
-      --ds-auro-input-container-color: transparent;
     }
   }
 
