refactor: make dropdown use shared sizeShape styles

--- a/components/dropdown/src/styles/shapeSize.scss
+++ b/components/dropdown/src/styles/shapeSize.scss
@@ -1,139 +1,5 @@
 /* stylelint-disable */
 
-@use '@aurodesignsystem/design-tokens/dist/auro-classic/SCSSVariables' as v;
+@use '@aurodesignsystem/design-tokens/dist/auro-classic/SCSSVariables';
+@use '../../../layoutElement/src/styles/shapeSize.scss';
 
-// SIZES
-$borderSize: 2px;
-$xl: calc(72px - ($borderSize * 2));
-$lg: calc(56px - ($borderSize * 2));
-$md: calc(48px - ($borderSize * 2));
-$sm: calc(36px - ($borderSize * 2));
-$xs: calc(24px - ($borderSize * 2));
-
-// SHAPES ---------------------------------------------------
-
-@mixin simple($size) {
-  &.simple {
-    border-width: 0;
-    min-height: $size;
-    max-height: $size;
-    background-color: unset;
-  }
-}
-
-.shape-classic-xl,
-.shape-classic-lg,
-.shape-classic-md,
-.shape-classic-sm,
-.shape-classic-xs {
-  min-height: 58px;
-  max-height: 58px;
-  border-style: solid;
-  border-width: 1px;
-  border-radius: var(--ds-border-radius, #{v.$ds-border-radius});
-
-  @include simple(60px);
-}
-
-
-.shape-snowflake-xl,
-.shape-snowflake-lg,
-.shape-snowflake-md,
-.shape-snowflake-sm,
-.shape-snowflake-xs {
-  min-height: 56px;
-  max-height: 56px;
-  border-style: solid;
-  border-width: 2px;
-  border-color: transparent;
-  border-radius: 30px;
-
-  @include simple(60px);
-}
-
-.shape-box-xl {
-  min-height: $xl;
-  max-height: $xl;
-  border-style: solid;
-  border-width: 2px;
-  border-color: transparent;
-
-  @include simple($xl + $borderSize + $borderSize);
-}
-
-.shape-rounded-lg {
-  min-height: $lg;
-  max-height: $lg;
-  border-style: solid;
-  border-width: 2px;
-  border-color: transparent;
-  border-radius: 6px;
-
-  @include simple($xl + $borderSize + $borderSize);
-}
-
-.shape-pill-xl {
-  min-height: $xl;
-  max-height: $xl;
-  border-style: solid;
-  border-width: 2px;
-  border-color: transparent;
-  border-radius: calc($xl / 2);
-
-  @include simple($xl + $borderSize + $borderSize);
-}
-
-.shape-pill-left-xl {
-  min-height: $xl;
-  max-height: $xl;
-  border-style: solid;
-  border-width: 2px;
-  border-color: transparent;
-  border-radius: calc($xl / 2) 0 0 calc($xl / 2);
-
-  @include simple($xl + $borderSize + $borderSize);
-}
-
-.shape-pill-right-xl {
-  min-height: $xl;
-  max-height: $xl;
-  border-style: solid;
-  border-width: 2px;
-  border-color: transparent;
-  border-radius: 0 calc($xl / 2) calc($xl / 2) 0;
-
-  @include simple($xl + $borderSize + $borderSize);
-}
-
-.shape-pill-md {
-  min-height: $xl;
-  max-height: $xl;
-  border-style: solid;
-  border-width: 2px;
-  border-color: transparent;
-  border-radius: calc($xl / 2);
-
-  @include simple($xl + $borderSize + $borderSize);
-}
-
-.shape-pill-left-md {
-  min-height: $xl;
-  max-height: $xl;
-  border-style: solid;
-  border-width: 2px;
-  border-color: transparent;
-  border-radius: calc($xl / 2) 0 0 calc($xl / 2);
-
-  @include simple($xl + $borderSize + $borderSize);
-}
-
-.shape-pill-right-md {
-  min-height: $xl;
-  max-height: $xl;
-  border-style: solid;
-  border-width: 2px;
-  border-color: transparent;
-  border-radius: 0 calc($xl / 2) calc($xl / 2) 0;
-
-  @include simple($xl + $borderSize + $borderSize);
-}
