--- a/components/select/src/styles/style.scss
+++ b/components/select/src/styles/style.scss
@@ -4,62 +4,154 @@
 // ---------------------------------------------------------------------
 
 // Import Auro tokens
+@use '@aurodesignsystem/design-tokens/dist/alaska/SCSSVariables--alaska' as v;
 @import "@aurodesignsystem/design-tokens/dist/auro-classic/SCSSVariables";
 
-@import '@aurodesignsystem/webcorestylesheets/src/breakpoints';
-@import '@aurodesignsystem/webcorestylesheets/src/core';
-@import '@aurodesignsystem/webcorestylesheets/src/utilityClasses/displayProperties';
+// @import '@aurodesignsystem/webcorestylesheets/src/breakpoints';
+// @import '@aurodesignsystem/webcorestylesheets/src/core';
+// @import '@aurodesignsystem/webcorestylesheets/src/utilityClasses/displayProperties';
 
 /* stylelint-disable selector-class-pattern */
 
-[slot='trigger'] {
+[auro-dropdown] {
+  --ds-auro-dropdown-trigger-border-color: var(--ds-auro-select-border-color);
+  --ds-auro-dropdown-trigger-background-color: var(--ds-auro-select-background-color);
+  --ds-auro-dropdown-trigger-container-color: var(--ds-auro-select-background-color);
+}
+
+.mainContent {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
+}
+
+.accents {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+::slotted([slot="typeIcon"]) {
+  margin-right: 8px;
+}
+
+// .layout-emphasized,
+// .layout-emphasized-left,
+// .layout-emphasized-right {
+//   .accents {
+//     &.left {
+//       // margin-left: 24px;
+//       // margin-right: 8px;
+//       padding-left: 24px;
+//       // width: 24px;
+//     }
+
+//     &.right {
+//       padding-right: 24px;
+//     }
+//   }
+// }
+
+.triggerContent {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 100%;
-  padding: 0;
-  border: 0;
-  cursor: pointer;
-  font-family: inherit;
-  font-size: inherit;
-  text-align: left;
+  padding: 0 8px 0 24px;
+}
 
-  .nestingSpacer {
-    display: none;
-  }
-
-  #placeholder {
-    &.hidden {
-      position: absolute;
-      z-index: -1;
-      opacity: 0;
-      pointer-events: none;
-    }
-  }
-} 
-
-:host {
-  .nativeSelectWrapper {
-    position: absolute;
-    overflow: hidden;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    border: 0;
-    margin: -1px;
-    clip: rect(0, 0, 0, 0);
-    opacity: 0.01;
-  }
-
+:host(:is([validity]:not([validity='valid']))) {
   [auro-dropdown] {
-    position: relative;
-
-    &::part(trigger) {
-      max-height: var(--ds-size-300, $ds-size-300);
-    }
-
-    &::part(popover) {
-      max-width: -webkit-fill-available;
-      overflow-y: scroll;
-    }
+    --ds-auro-select-border-color: var(--ds-basic-color-status-error, #{v.$ds-basic-color-status-error});
+    --ds-auro-dropdown-helptext-text-color: var(--ds-basic-color-texticon-default, #{v.$ds-basic-color-texticon-default});
   }
+}
+
+:host([ondark]:is([validity]:not([validity='valid']))) {
+  [auro-dropdown] {
+    --ds-auro-select-border-color: var(--ds-advanced-color-state-error-inverse, #{v.$ds-advanced-color-state-error-inverse});
+    --ds-auro-dropdown-helptext-text-color: var(--ds-basic-color-texticon-inverse, #{v.$ds-basic-color-texticon-inverse});
+  }
+}
+
+// [slot='trigger'] {
+//   width: 100%;
+//   padding: 0;
+//   border: 0;
+//   cursor: pointer;
+//   font-family: inherit;
+//   font-size: inherit;
+//   text-align: left;
+
+//   .nestingSpacer {
+//     display: none;
+//   }
+
+//   #placeholder {
+//     &.hidden {
+//       position: absolute;
+//       z-index: -1;
+//       opacity: 0;
+//       pointer-events: none;
+//     }
+//   }
+// } 
+
+// :host {
+//   .nativeSelectWrapper {
+//     position: absolute;
+//     overflow: hidden;
+//     width: 1px;
+//     height: 1px;
+//     padding: 0;
+//     border: 0;
+//     margin: -1px;
+//     clip: rect(0, 0, 0, 0);
+//     opacity: 0.01;
+//   }
+
+//   [auro-dropdown] {
+//     position: relative;
+
+//     &::part(trigger) {
+//       max-height: var(--ds-size-300, $ds-size-300);
+//     }
+
+//     &::part(popover) {
+//       max-width: -webkit-fill-available;
+//       overflow-y: scroll;
+//     }
+//   }
+// }
+
+// .outerWrapper,
+// .wrapper {
+//   position: relative;
+// }
+
+// .menuWrapper {
+//   padding: var(--ds-size-50, $ds-size-50) 0;
+// }
+
+// // Multiselect styles
+// :host([multiselect]) {
+//   [slot="trigger"] {
+//     display: flex;
+//   }
+
+//   auro-menuoption {
+//     &:not(:first-child) {
+//       margin-left: var(--ds-size-100);
+//     }
+//   }
+// }
+
+#slotHolder{
+  display: none;
 }
 
 :host([disabled]) {
@@ -68,32 +160,7 @@
   }
 }
 
-.outerWrapper {
-  position: relative;
-}
-
-auro-menuoption {
-  padding: 0;
-  pointer-events: none;
-}
-
-.menuWrapper {
-  padding: var(--ds-size-50, $ds-size-50) 0;
-}
-
-// Multiselect styles
-:host([multiselect]) {
-  [slot="trigger"] {
-    display: flex;
-  }
-
-  auro-menuoption {
-    &:not(:first-child) {
-      margin-left: var(--ds-size-100);
-    }
-  }
-}
-
-#slotHolder{
-  display: none;
-}
+// auro-menuoption {
+//   padding: 0;
+//   pointer-events: none;
+// }
